# ML-Quiz-App-Assignment-3-ERA-v4

./: README.md  app.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
